cmake_minimum_required(VERSION 4.1)
project(CS104)

set(CMAKE_CXX_STANDARD 14)

# ── 25321005 ──────────────────────────────────────────────────────────────────
add_executable(25321005_Hello     2026/25321005/Hello_World/Hello.cpp)
add_executable(25321005_Suma      2026/25321005/Suma/suma.cpp)
add_executable(25321005_Rectangle 2026/25321005/Regtangle/regtangle.cpp)
add_executable(25321005_Circle    2026/25321005/Circle/circle.cpp)
