cmake_minimum_required(VERSION 4.1)
project(CS104)

set(CMAKE_CXX_STANDARD 14)

# ── 25321005 ──────────────────────────────────────────────────────────────────
add_executable(25321005_Hello             2026/25321005/01_Hello/Hello.cpp)
add_executable(25321005_Suma              2026/25321005/02_Suma/suma.cpp)
add_executable(25321005_Rectangle         2026/25321005/03_Rectangle/regtangle.cpp)
add_executable(25321005_Circle            2026/25321005/04_Circle/circle.cpp
        2026/25321005/12_Click/main.cpp
        2026/25321005/13_Sum_UP_to/main.cpp
        2026/25321005/14_Fak_UP_To/main.cpp
        2026/25321005/15_Digit3_3&5/main.cpp
        2026/25321005/16_Digit_Special/main.cpp
        2026/25321005/17_Fibonacci/main.cpp
        2026/25321005/18_Primes/main.cpp
        2026/25321005/19_An_1_N/main.cpp
        2026/25321005/20_An_1_N2/main.cpp)
add_executable(25321005_Reverse           2026/25321005/05_Reverse/reverce.cpp)
add_executable(25321005_Square_Equation   2026/25321005/06_Square_equation/Square_1.cpp)
add_executable(25321005_Square_Equation_2 2026/25321005/07_Square_equation_2/Square_2.cpp)
add_executable(25321005_NAP_2016          2026/25321005/08_NAP-2016/nap2016.cpp)
add_executable(25321005_For               2026/25321005/09_For/for.cpp)
add_executable(25321005_While             2026/25321005/10_While/while.cpp)
add_executable(25321005_Do_While          2026/25321005/11_DO_While/do-while.cpp)
